--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+
+# config/services.yaml
+parameters:
+    articles_images_directory: '%kernel.project_dir%/public/images/articles'
