--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "@babel/preset-env": "^7.24.3",
     "@babel/preset-react": "^7.24.1",
     "@symfony/webpack-encore": "^4.6.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "postcss-loader": "^7.0.0",
+    "sass": "^1.72.0",
+    "sass-loader": "^13.0.0",
+    "tailwindcss": "^3.4.1",
     "webpack-notifier": "^1.15.0"
   },
   "scripts": {
