--- a/config/routes/articles.yaml
+++ b/config/routes/articles.yaml
@@ -5,3 +5,13 @@ app_articles:
 article_ajouter:
     path: /article/ajouter
     controller: 'App\Controller\ArticlesController::ajouter'
+
+article_modifier:
+    path: /article/{id}/modifier
+    controller: 'App\Controller\ArticlesController::modifier'
+    methods: ['GET', 'POST']
+
+
+articles_show:
+    path: /articles/show/{nom}  # Inclure le paramètre {nom}
+    controller: App\Controller\ArticlesController::getOneByNom
