--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,11 @@
 parameters:
 
 services:
+
+    App\Controller\ArticlesController:
+        arguments: ['@doctrine.orm.entity_manager']  # Injection de EntityManager
+        tags: ['controller.service_arguments']
+
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
