--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "devDependencies": {
     "@babel/preset-env": "^7.24.3",
     "@babel/preset-react": "^7.24.1",
+    "@melt-ui/pp": "^0.3.0",
+    "@melt-ui/svelte": "^0.76.2",
     "@symfony/webpack-encore": "^4.6.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "postcss-loader": "^7.0.0",
+    "postcss-loader": "^7.3.4",
     "sass": "^1.72.0",
     "sass-loader": "^13.0.0",
     "tailwindcss": "^3.4.1",
