--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,7 +2,7 @@ security:
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        Symfony\Component\Security\Core\User\UserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         users_in_memory: { memory: null }
@@ -29,12 +29,11 @@ security:
 when@test:
     security:
         password_hashers:
-            # By default, password hashers are resource intensive and take time. This is
-            # important to generate secure password hashes. In tests however, secure hashes
-            # are not important, waste resources and increase test times. The following
-            # reduces the work factor to the lowest possible values.
-            Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
+            # Par défaut, les hachages de mot de passe sont intensifs en ressources et prennent du temps. Cependant, 
+            # dans les tests, les hachages sécurisés ne sont pas importants, gaspillent des ressources et augmentent 
+            # les temps de test. Les valeurs suivantes réduisent le travail au minimum.
+            Symfony\Component\Security\Core\User\UserInterface:
                 algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+                cost: 4 # Valeur la plus basse possible pour bcrypt
+                time_cost: 3 # Valeur la plus basse possible pour argon
+                memory_cost: 10 # Valeur la plus basse possible pour argon
