--- a/.env
+++ b/.env
@@ -36,5 +36,10 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+#MAILER_DSN=gmail://your_username:your_password@localhost
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+ MAILER_DSN=gmail://mehdikallel9@gmail.com:09633841@default
+###< symfony/google-mailer ###
