--- a/.env
+++ b/.env
@@ -36,10 +36,14 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-#MAILER_DSN=gmail://your_username:your_password@localhost
+#MAILER_DSN=gmail://mehdikallel9@gmail.com:09633841@localhost
 ###< symfony/mailer ###
+
+# .env
+MAILER_DSN=smtp://localhost
+
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
- MAILER_DSN=gmail://mehdikallel9@gmail.com:09633841@default
+ #MAILER_DSN=gmail://mehdikallel9@gmail.com:09633841
 ###< symfony/google-mailer ###
