--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,5 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+calendar:
+    resource: "@CalendarBundle/Resources/config/routing.yaml"
