--- a/.env
+++ b/.env
@@ -48,3 +48,15 @@ MERCURE_PUBLIC_URL=https://example.com/.well-known/mercure
 # The secret used to sign the JWTs
 MERCURE_JWT_SECRET="!ChangeThisMercureHubJWTSecretKey!"
 ###< symfony/mercure-bundle ###
+
+###> google/recaptcha ###
+# To use Google Recaptcha, you must register a site on Recaptcha's admin panel:
+# https://www.google.com/recaptcha/admin
+GOOGLE_RECAPTCHA_SITE_KEY=
+GOOGLE_RECAPTCHA_SECRET=
+###< google/recaptcha ###
+
+###> beelab/recaptcha2-bundle ###
+APP_RECAPTCHA_SITE_KEY="6LfceI8pAAAAAO-oBmto6b52lWN76aX51TPNYWa0"
+APP_RECAPTCHA_SECRET="6LfceI8pAAAAAGS2D1UpONxYyUybT9udsq1bG2qm"
+###< beelab/recaptcha2-bundle ###
