--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "beelab/recaptcha2-bundle": "^2.7",
         "botman/botman": "^2.8",
         "botman/driver-facebook": "^1.11",
         "doctrine/annotations": "^2.0",
