--- a/.env
+++ b/.env
@@ -35,15 +35,30 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/prodev"
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
+
 ###> symfony/mailer ###
 #MAILER_DSN=gmail://mehdikallel9@gmail.com:09633841@localhost
 ###< symfony/mailer ###
 
 # .env
-MAILER_DSN=smtp://localhost
+#MAILER_DSN=smtp://localhost
 
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
- #MAILER_DSN=gmail://mehdikallel9@gmail.com:09633841
+ #MAILER_DSN=gmail://mehdikallel9@gmail.com:09633841@localhost
 ###< symfony/google-mailer ###
+# config/packages/mailer.yaml
+
+
+TWILIO_DSN=TWILIO_DSN
+twilio_account_sid=AC370acbd74186d12f7f758c0f677df3e8
+TWILIO_AUTH_TOKEN=570c37fa9f842d11bdd3c18b981930ac
+twilio_from_number=+12564084038
+twilio_to_number=+21654026538
