--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.9",
+        "dompdf/dompdf": "^2.0",
+        "jolicode/jolinotif": "^2.6",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.25",
         "sensio/framework-extra-bundle": "^6.2",
@@ -39,6 +41,7 @@
         "symfony/serializer": "5.4.*",
         "symfony/stimulus-bundle": "^2.14",
         "symfony/string": "5.4.*",
+        "symfony/swiftmailer-bundle": "*",
         "symfony/translation": "5.4.*",
         "symfony/twig-bundle": "5.4.*",
         "symfony/ux-turbo": "^2.14",
